// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executive summary budget component DollarCell renders correctly 1`] = `
<td
  className="budget-table--number"
  headers="one two three"
>
  <Dollars
    long={false}
  >
    32.57
  </Dollars>
</td>
`;

exports[`executive summary budget component DollarCell renders correctly 2`] = `
<td
  className="budget-table--number"
  headers="one two three"
>
  <Dollars
    long={false}
  >
    75.23
  </Dollars>
</td>
`;

exports[`executive summary budget component renders correctly with data 1`] = `
<Fragment>
  <h3
    className="ds-h3"
  >
    HIT + HIE
  </h3>
  <table
    className="budget-table"
  >
    <thead>
      <tr>
        <th
          id="program-budget-table-null1"
        />
        <th
          className="ds-u-text-align--center"
          colSpan="2"
          id="program-budget-table-hit"
        >
          HIT (90/10)
        </th>
        <th
          className="ds-u-text-align--center"
          colSpan="2"
          id="program-budget-table-hie"
        >
          HIE (90/10)
        </th>
        <th
          className="ds-u-text-align--center"
          colSpan="2"
          id="program-budget-table-combined"
        >
          HIT + HIE (90/10)
        </th>
      </tr>
      <tr>
        <th
          id="program-budget-table-null2"
        />
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hit-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hit-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hie-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hie-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-combined-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-combined-state"
        >
          State
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        key="1"
      >
        <th
          headers="program-budget-table-null1 program-budget-table-null2"
          scope="row"
        >
          FFY 1
        </th>
        <DollarCell
          headers="program-budget-table-hit program-budget-table-hit-fed"
          value={1}
        />
        <DollarCell
          headers="program-budget-table-hit program-budget-table-hit-state"
          value={2}
        />
        <DollarCell
          headers="program-budget-table-hie program-budget-table-hie-fed"
          value={10}
        />
        <DollarCell
          headers="program-budget-table-hie program-budget-table-hie-state"
          value={20}
        />
        <DollarCell
          headers="program-budget-table-combined program-budget-table-combined-fed"
          value={100}
        />
        <DollarCell
          headers="program-budget-table-combined program-budget-table-combined-state"
          value={200}
        />
      </tr>
      <tr
        className=""
        key="2"
      >
        <th
          headers="program-budget-table-null1 program-budget-table-null2"
          scope="row"
        >
          FFY 2
        </th>
        <DollarCell
          headers="program-budget-table-hit program-budget-table-hit-fed"
          value={3}
        />
        <DollarCell
          headers="program-budget-table-hit program-budget-table-hit-state"
          value={4}
        />
        <DollarCell
          headers="program-budget-table-hie program-budget-table-hie-fed"
          value={30}
        />
        <DollarCell
          headers="program-budget-table-hie program-budget-table-hie-state"
          value={40}
        />
        <DollarCell
          headers="program-budget-table-combined program-budget-table-combined-fed"
          value={400}
        />
        <DollarCell
          headers="program-budget-table-combined program-budget-table-combined-state"
          value={500}
        />
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight"
        key="total"
      >
        <th
          headers="program-budget-table-null1 program-budget-table-null2"
          scope="row"
        >
          Total
        </th>
        <DollarCell
          headers="program-budget-table-hit program-budget-table-hit-fed"
          value={5}
        />
        <DollarCell
          headers="program-budget-table-hit program-budget-table-hit-state"
          value={6}
        />
        <DollarCell
          headers="program-budget-table-hie program-budget-table-hie-fed"
          value={50}
        />
        <DollarCell
          headers="program-budget-table-hie program-budget-table-hie-state"
          value={60}
        />
        <DollarCell
          headers="program-budget-table-combined program-budget-table-combined-fed"
          value={700}
        />
        <DollarCell
          headers="program-budget-table-combined program-budget-table-combined-state"
          value={800}
        />
      </tr>
    </tbody>
  </table>
  <table
    className="budget-table budget-table--totals"
  >
    <caption
      className="ds-u-visibility--screen-reader"
    >
      Medicaid HIE and HIT totals per year
    </caption>
    <thead>
      <th />
      <th
        className="ds-u-text-align--right"
        id="program-budget-table-combined-total"
      >
        Medicaid total
      </th>
    </thead>
    <tbody>
      <tr
        className=""
        key="1-medicaid-total"
      >
        <th
          scope="row"
        >
          FFY 1
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            300
          </Dollars>
        </td>
      </tr>
      <tr
        className=""
        key="2-medicaid-total"
      >
        <th
          scope="row"
        >
          FFY 2
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            700
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight"
        key="total-medicaid-total"
      >
        <th
          scope="row"
        >
          Total
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            1500
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
  <h3
    className="ds-h3"
  >
    MMIS
  </h3>
  <table
    className="budget-table"
  >
    <thead>
      <tr>
        <th
          id="program-budget-table-null3"
        />
        <th
          className="ds-u-text-align--center"
          colSpan="2"
          id="program-budget-table-mmis90"
        >
          MMIS (90/10)
        </th>
        <th
          className="ds-u-text-align--center"
          colSpan="2"
          id="program-budget-table-mmis75"
        >
          MMIS (75/25)
        </th>
        <th
          className="ds-u-text-align--center"
          colSpan="2"
          id="program-budget-table-mmis50"
        >
          MMIS (50/50)
        </th>
        <th
          className="ds-u-text-align--center"
          colSpan="2"
          id="program-budget-table-mmisTotal"
        >
          MMIS (Total)
        </th>
      </tr>
      <tr>
        <th
          id="program-budget-table-null4"
        />
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis90-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis90-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis75-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis75-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis50-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis50-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmisTotal-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmisTotal-state"
        >
          State
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        key="1"
      >
        <th
          headers="program-budget-table-null3 program-budget-table-null4"
          scope="row"
        >
          FFY 1
        </th>
        <DollarCell
          headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
          value={1}
        />
        <DollarCell
          headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
          value={2}
        />
        <DollarCell
          headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
          value={10}
        />
        <DollarCell
          headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
          value={20}
        />
        <DollarCell
          headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
          value={100}
        />
        <DollarCell
          headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
          value={200}
        />
        <DollarCell
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
          value={1000}
        />
        <DollarCell
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
          value={2000}
        />
      </tr>
      <tr
        className=""
        key="2"
      >
        <th
          headers="program-budget-table-null3 program-budget-table-null4"
          scope="row"
        >
          FFY 2
        </th>
        <DollarCell
          headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
          value={3}
        />
        <DollarCell
          headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
          value={4}
        />
        <DollarCell
          headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
          value={30}
        />
        <DollarCell
          headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
          value={40}
        />
        <DollarCell
          headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
          value={300}
        />
        <DollarCell
          headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
          value={400}
        />
        <DollarCell
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
          value={4000}
        />
        <DollarCell
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
          value={5000}
        />
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight"
        key="total"
      >
        <th
          headers="program-budget-table-null3 program-budget-table-null4"
          scope="row"
        >
          Total
        </th>
        <DollarCell
          headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
          value={5}
        />
        <DollarCell
          headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
          value={6}
        />
        <DollarCell
          headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
          value={50}
        />
        <DollarCell
          headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
          value={60}
        />
        <DollarCell
          headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
          value={500}
        />
        <DollarCell
          headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
          value={600}
        />
        <DollarCell
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
          value={7000}
        />
        <DollarCell
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
          value={8000}
        />
      </tr>
    </tbody>
  </table>
  <table
    className="budget-table budget-table--totals"
  >
    <caption
      className="ds-u-visibility--screen-reader"
    >
      Medicaid MMIS totals by year
    </caption>
    <thead>
      <th />
      <th
        className="ds-u-text-align--right"
        id="program-budget-table-mmisTotal-total"
      >
        Medicaid total
      </th>
    </thead>
    <tbody>
      <tr
        className=""
        key="1"
      >
        <th
          scope="row"
        >
          FFY 1
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            3000
          </Dollars>
        </td>
      </tr>
      <tr
        className=""
        key="2"
      >
        <th
          scope="row"
        >
          FFY 2
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            9000
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight"
        key="total"
      >
        <th
          scope="row"
        >
          Total
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars
            long={false}
          >
            15000
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`executive summary budget component renders correctly without data 1`] = `""`;
